--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11201,7 +11201,7 @@ header .hamburger-menu {
   width: 100%;
   height: 100%;
   min-width: 100vw;
-  min-height: 14vh;
+  min-height: 23vh;
   background: #fff;
 }
 
@@ -11476,7 +11476,7 @@ header .hamburger-menu ul a:focus {
   font-size: 16px;
 }
 
-.apt_box #city_p {
+.apt_box .city_p {
   font-size: 25px;
   font-weight: 900;
 }
@@ -11524,6 +11524,32 @@ header .hamburger-menu ul a:focus {
 
 .apt_box .message-form.active {
   display: block;
+}
+
+.apt_box .map {
+  display: -webkit-box;
+  display: flex;
+  width: auto;
+  height: 300px;
+  background-size: cover;
+  margin: 50px 0;
+}
+
+.apt_box .apt_show_buttons {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+}
+
+.apt_box .apt_show_buttons .button_style {
+  width: 227.15px;
+}
+
+.apt_box .apt_show_buttons a:hover {
+  color: #fff;
+  text-decoration: none;
 }
 
 /* REGOLE DELLA CREATE e EDIT E VISUALIZZAZIONE MESSAGGI--------------------------------------------------- */
@@ -11578,6 +11604,14 @@ header .hamburger-menu ul a:focus {
   padding: 50px;
   margin: 12px auto;
   text-align: center;
+}
+
+.message_box h4 {
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 10px;
 }
 
 .message_box #content_p {
