--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -95,7 +95,7 @@ header {
     width: 100%;
     height: 100%;
     min-width: 100vw;
-    min-height: 14vh;
+    min-height: 23vh;
     background: #fff;
     ul {
       display: flex;
@@ -320,7 +320,7 @@ header {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
 
-  #city_p {
+  .city_p {
     font-size: 25px;
     font-weight: 900;
   }
@@ -377,6 +377,25 @@ header {
     display: block;
   }
 
+  .map {
+    display: flex;
+    width: auto;
+    height: 300px;
+    background-size: cover;
+    margin: 50px 0;
+  }
+  .apt_show_buttons {
+    display: flex;
+    flex-direction: column;
+    .button_style {
+      width: 227.15px;
+    }
+    a:hover {
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+  
 }
 
 /* REGOLE DELLA CREATE e EDIT E VISUALIZZAZIONE MESSAGGI--------------------------------------------------- */
@@ -420,7 +439,13 @@ header {
   padding: 50px;
   margin: 12px auto;
   text-align: center;
-
+  h4 {
+    text-transform: uppercase;
+    font-family: "Poppins", sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
   #content_p {
     font-size: 18px;
     font-style:italic;
