--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -395,11 +395,11 @@ header {
       text-decoration: none;
     }
   }
-  
+
 }
 
 /* REGOLE DELLA CREATE e EDIT E VISUALIZZAZIONE MESSAGGI--------------------------------------------------- */
-.apt_create_box, .apt_edit_box, .msgs_box {
+.apt_create_box, .apt_edit_box, .msgs_box, .payment_box {
   padding-top: 100px;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
